bonus/confs/gitlab_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonus-ingress
  namespace: gitlab
  annotations:
    IOT/owner: "m&m's"
  labels:
    iot: bonus
spec:
  rules:
  - host: mygitlab.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
